welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:2: error: illegal start of simple expression
while()estFaceMur():Boolean)!=1){
      ^Program:7: error: ')' expected but '}' found.
	}
        ^