welcome.lessons.welcome.loopwhile.LoopWhile.scala.code
while()estFaceMur():Boolean)!=1){
	recule()
}
